<resources>
    <string name="app_name">mobexam</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="postowner">Эзэмшигч бүртгэх</string>
    <string name="postcar">Машиг бүртгэх</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="register_number">Register Number</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="mark">Машины марк</string>
    <string name="uniquenumber">Улсын дугаар</string>
    <string name="motor">Моторын багтаамж</string>
    <string name="ownerchoose">Эзэмшигчийг сонгоно уу</string>
</resources>